# arkworks-phase2

./: Cargo.toml  bn254phase1radix2m2  phase1radix2m2  phase1radix2m8
src/: accumulator.rs  error.rs  hasher.rs  key.rs  keypair.rs  lib.rs  pot.rs  ratio.rs  reader.rs  transcript.rs  utils.rs
