[package]
name = "arkworks-phase2"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Tetration-Lab/arkworks-phase2"
description = "Arkworks implementation of Groth16's CRS generation ceremony"
license = "LGPL-3.0-only"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }

rand = "0.8.5"
thiserror = "1.0.40"
rand_chacha = "0.3.1"
blake3 = "0.1.3"

rayon = { version = "^1.7.0", optional = true }

[dev-dependencies]
ark-std = { version = "^0.3.0", default-features = false, features = ["print-trace"] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-snark = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false, features = ["parallel"] }

[features]
default = []
parallel = ["rayon", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-r1cs-std/parallel"]
